--- a/_posts/2018-03-07-Flask.md
+++ b/_posts/2018-03-07-Flask.md
@@ -1,10 +1,7 @@
 ---
 layout: post
-title: "[REST API]chat-bot with Flask"
-author: "Junki Cho"
-categories: journal
-tags: [Python, web, programming, server, aws]
-image: selenium.png
+title: REST API Python chat-bot with Flask
+tags: [Computer Science]
 ---
 # REST API
 
