--- a/_posts/2018-03-07-Flask.md
+++ b/_posts/2018-03-07-Flask.md
@@ -1,8 +1,7 @@
 ---
 layout: post
-title: REST API Python chat-bot with Flask
+title: Slack chat-bot with Flask
 tags: [Computer Science]
 ---
-# REST API
 
-2. chat-bot
+How to build Slack chat-bot
