--- a/_posts/2018-01-02-basic.md
+++ b/_posts/2018-01-02-basic.md
@@ -3,3 +3,32 @@ layout: post
 title: Python Basic syntax
 tags: [Computer Science]
 ---
+
+Python is object oriented programming language. It literately means python orient object programming.
+
+Here is object oriented program example:
+
+'''python
+
+class Celsius:
+    def __init__(self, temperature = 0):
+        self._temperature = temperature
+
+    def to_fahrenheit(self):
+        return (self.temperature * 1.8) + 32
+
+    @property
+    def temperature(self):
+        print("Getting value")
+        return self._temperature
+
+    @temperature.setter
+    def temperature(self, value):
+        if value < -273:
+            raise ValueError("Temperature below -273 is not possible")
+        print("Setting value")
+        self._temperature = value
+
+'''
+
+This class 'Celsius' converts Fahrenheit to Cecilius. 'def' defines function, 'to_fahrenheit'.
