python basic in process

--- a/_posts/2018-01-02-basic.md
+++ b/_posts/2018-01-02-basic.md
@@ -8,8 +8,7 @@ Python is object oriented programming language. It literately means python orien
 
 Here is object oriented program example:
 
-'''python
-
+```Python
 class Celsius:
     def __init__(self, temperature = 0):
         self._temperature = temperature
@@ -28,7 +27,6 @@ class Celsius:
             raise ValueError("Temperature below -273 is not possible")
         print("Setting value")
         self._temperature = value
-
-'''
+```
 
 This class 'Celsius' converts Fahrenheit to Cecilius. 'def' defines function, 'to_fahrenheit'.
