background image updated

--- a/_posts/2018-01-02-basic.md
+++ b/_posts/2018-01-02-basic.md
@@ -1,10 +1,14 @@
 ---
 layout: post
-title: Python Basic syntax
+title: Python Object Oriented Programming
 tags: [Computer Science]
 ---
 
 Python is object oriented programming language. It literately means python orient object programming.
+
+'The Zen of Python'  ==> pythonic code
+
+
 
 Here is object oriented program example:
 
@@ -29,4 +33,8 @@ class Celsius:
         self._temperature = value
 ```
 
-This class 'Celsius' converts Fahrenheit to Cecilius. 'def' defines function, 'to_fahrenheit'.
+'class' declares object. 'Celsius' converts Fahrenheit to Cecilius.
+
+'def' defines function, 'to_fahrenheit'.
+
+'args' and 'kwargs'
