python posting in process

--- a/_posts/2018-01-02-basic.md
+++ b/_posts/2018-01-02-basic.md
@@ -1,12 +1,15 @@
 ---
 layout: post
-title: Python Object Oriented Programming
+title: Python is Object Oriented Programming
 tags: [Computer Science]
 ---
+**__Python__**
 
-Python is object oriented programming language. It literately means python orient object programming.
+Python is object oriented programming language.
 
-'The Zen of Python'  ==> pythonic code
+What is pythonic programming?
+
+It follows 'The Zen of Python'
 
 
 
@@ -33,8 +36,80 @@ class Celsius:
         self._temperature = value
 ```
 
-'class' declares object. 'Celsius' converts Fahrenheit to Cecilius.
+**__class__**
 
-'def' defines function, 'to_fahrenheit'.
+> creates a new type of object, allowing new instances of that type to be made
 
-'args' and 'kwargs'
+`Celsius` is an object.
+
+`temperature` is an instance.\
+
+**__def__**
+
+>introduces a function definition
+>must be followed by the function name and the parenthesized list of formal parameters
+
+__execution__
+>introduces a new symbol table used for the local variables of the function
+>all variable assignments in a function store the value in the local symbol table
+>then in the local symbol tables of enclosing functions
+>then in the global symbol table, and finally in the table of built-in names
+
+The actual parameters (arguments) to a function call are introduced in the local symbol table of the called function when it is called: thus, arguments are passed using call by value.
+
+`to_fahrenheit` returns (temperature*1.8) + 32\
+
+
+**__@property__**
+
+>If given, doc will be the docstring of the property attribute.
+>Otherwise, the property will copy fget’s docstring (if it exists).
+>This makes it possible to create read-only properties easily using property() as a decorator
+
+```
+get_
+
+set_
+
+```
+
+
+**__@decorator__**
+
+
+The current method of applying a transformation to a function or method places the actual transformation after the function body. For large functions this separates a key component of the function's behavior from the definition of the rest of the function's external interface. For example:
+
+```python
+def foo(self):
+    perform method operation
+foo = classmethod(foo)
+```
+
+This becomes less readable with longer methods. It also seems less than pythonic to name the function three times for what is conceptually a single declaration. A solution to this problem is to move the transformation of the method closer to the method's own declaration. The intent of the new syntax is to replace
+
+```python
+def foo(cls):
+    pass
+foo = synchronized(lock)(foo)
+foo = classmethod(foo)
+```
+with an alternative that places the decoration in the function's declaration:
+
+```python
+@classmethod
+@synchronized(lock)
+def foo(cls):
+    pass
+```
+Modifying classes in this fashion is also possible, though the benefits are not as immediately apparent
+
+
+
+**__TIPS__**
+>
+>
+>
+
+
+***
+**__Reference__**
