python posts in process

--- a/_posts/2018-01-02-python-is.md
+++ b/_posts/2018-01-02-python-is.md
@@ -3,19 +3,20 @@ layout: post
 title: Python is Object Oriented Programming
 tags: [Computer Science]
 ---
-**__Python__**
+**Python**
 
-Python is object oriented programming language.
+Python is an object oriented programming language.
 
 What is pythonic programming?
 
-It follows 'The Zen of Python'
+It follows 'The Zen of Python'\
 
 
-
+\
+\
 Here is object oriented program example:
 
-```Python
+```python
 class Celsius:
     def __init__(self, temperature = 0):
         self._temperature = temperature
@@ -36,7 +37,8 @@ class Celsius:
         self._temperature = value
 ```
 
-**__class__**
+
+- **__class__**
 
 > creates a new type of object, allowing new instances of that type to be made
 
@@ -44,12 +46,12 @@ class Celsius:
 
 `temperature` is an instance.\
 
-**__def__**
+- **def**
 
 >introduces a function definition
 >must be followed by the function name and the parenthesized list of formal parameters
 
-__execution__
+    - **execution**
 >introduces a new symbol table used for the local variables of the function
 >all variable assignments in a function store the value in the local symbol table
 >then in the local symbol tables of enclosing functions
@@ -57,10 +59,10 @@ __execution__
 
 The actual parameters (arguments) to a function call are introduced in the local symbol table of the called function when it is called: thus, arguments are passed using call by value.
 
-`to_fahrenheit` returns (temperature*1.8) + 32\
+function of `to_fahrenheit` receives arguments of `value`. then it returns `(temperature*1.8) + 32\`
 
 
-**__@property__**
+- **@property**
 
 >If given, doc will be the docstring of the property attribute.
 >Otherwise, the property will copy fget’s docstring (if it exists).
@@ -74,10 +76,12 @@ set_
 ```
 
 
-**__@decorator__**
+- **@decorator**
 
 
-The current method of applying a transformation to a function or method places the actual transformation after the function body. For large functions this separates a key component of the function's behavior from the definition of the rest of the function's external interface. For example:
+The current method of applying a transformation to a function or method places the actual transformation after the function body. For large functions this separates a key component of the function's behavior from the definition of the rest of the function's external interface.
+
+For example:
 
 ```python
 def foo(self):
@@ -105,11 +109,11 @@ Modifying classes in this fashion is also possible, though the benefits are not 
 
 
 
-**__TIPS__**
+- **TIPS**
 >
 >
 >
 
 
 ***
-**__Reference__**
+- **Reference**
