--- a/_posts/2018-01-02-python-is.md
+++ b/_posts/2018-01-02-python-is.md
@@ -9,11 +9,9 @@ Python is an object oriented programming language.
 
 What is pythonic programming?
 
-It follows 'The Zen of Python'\
+It follows 'The Zen of Python'
 
 
-\
-\
 Here is object oriented program example:
 
 ```python
@@ -38,20 +36,20 @@ class Celsius:
 ```
 
 
-- **__class__**
+- **class**
 
 > creates a new type of object, allowing new instances of that type to be made
 
 `Celsius` is an object.
 
-`temperature` is an instance.\
+`temperature` is an instance.
 
 - **def**
 
 >introduces a function definition
 >must be followed by the function name and the parenthesized list of formal parameters
 
-    - **execution**
+- *execution*
 >introduces a new symbol table used for the local variables of the function
 >all variable assignments in a function store the value in the local symbol table
 >then in the local symbol tables of enclosing functions
@@ -114,6 +112,6 @@ Modifying classes in this fashion is also possible, though the benefits are not 
 >
 >
 
-
+Related Posts
 ***
 - **Reference**
