--- a/_posts/2018-02-09-requests.md
+++ b/_posts/2018-02-09-requests.md
@@ -5,7 +5,65 @@ tags: [Computer Science]
 ---
 **web crawling**
 
-
-
-
 *requests*
+
+usage
+
+```python
+import requests
+import time
+from bs4 import BeautifulSoup
+import numpy as np
+import pandas as pd
+
+def make_url(pageSize=10, page=1):
+    return "http://m.stock.naver.com/api/json/sise/siseListJson.nhn?menu=market_sum&sosok=0&pageSize=" + str(pageSize) + "&page=" + str(page)
+
+def get_data(url):
+    response = requests.get(url)
+    json_info = response.json()
+    companys = json_info["result"]["itemList"]
+    df = pd.DataFrame(columns=["종목", "시세", "전일비", "등락율", "시가총액", "거래량"])
+    for company in companys:
+        df.loc[len(df)] = {
+            "종목":company["nm"],
+            "시세":company["nv"],
+            "전일비":company["cv"],
+            "등락율":company["cr"],
+            "시가총액":company["mks"],
+            "거래량":company["aq"],
+        }
+    return df
+```
+```python
+url = make_url(100,1)
+df = get_data(url)
+df.tail()
+```
+
+*BeautifulSoup*
+
+```python
+def naver_top20():
+    df = pd.DataFrame(columns=["rank","keyword"])
+    response = requests.get("http://naver.com")
+    dom = BeautifulSoup(response.content, "html.parser")
+    keywords = dom.select(".ah_roll .ah_l .ah_item")
+    for keyword in keywords:
+        df.loc[len(df)] = {
+            "rank":keyword.select_one(".ah_r").text,
+            "keyword":keyword.select_one(".ah_k").text,
+        }
+    return df
+```
+```python
+naver_df = naver_top20()
+naver_df
+```
+
+
+
+***
+*Reference*
+
+[예제로 배우는 파이썬 프로그래밍](http://pythonstudy.xyz/python/article/403-%ED%8C%8C%EC%9D%B4%EC%8D%AC-Web-Scraping)
