latex apply in process

--- a/_posts/2018-01-02-python-is.md
+++ b/_posts/2018-01-02-python-is.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Python is Object Oriented Programming
-tags: [Computer Science]
+tags: [Computer Science, python]
 ---
 **Python**
 
