--- a/_posts/2018-01-13-matrix.md
+++ b/_posts/2018-01-13-matrix.md
@@ -9,19 +9,22 @@ tags: [Math, Linear Algebra]
 >$$x \in \mathbf{R}$$
 
 **vector**
-$$x = \begin{bmatrix}$$
-$$x_{1} \\
+$$
+x = \begin{bmatrix}
+x_{1} \\
 x_{2} \\
 \vdots \\
 x_{N} \\
 \end{bmatrix}
 ,\;\;\;\;
-x \in \mathbf{R}^N$$
+x \in \mathbf{R}^N
+$$
 
 
 **Matrix**
 ![alt text](/assets/img/matrix.svg)
 
+$$
 x =
 \begin{bmatrix}
 x_{1} \\
@@ -34,7 +37,7 @@ x^T =
 \begin{bmatrix}
 x_{1} & x_{2} & \cdots & x_{N}
 \end{bmatrix}
-
+$$
 
 **determinant**
 ![alt text](/assets/img/matrix.svg)
