--- a/_posts/2018-01-13-matrix.md
+++ b/_posts/2018-01-13-matrix.md
@@ -9,35 +9,62 @@ tags: [Math, Linear Algebra]
 >$$x \in \mathbf{R}$$
 
 **vector**
-$$
-x = \begin{bmatrix}
-x_{1} \\
-x_{2} \\
-\vdots \\
-x_{N} \\
-\end{bmatrix}
-,\;\;\;\;
-x \in \mathbf{R}^N
-$$
+$$x = \begin{bmatrix}x_{1} \\x_{2} \\\vdots \\x_{N} \\\end{bmatrix},\;\;\;\;x \in \mathbf{R}^N$$
 
 
 **Matrix**
 ![alt text](/assets/img/matrix.svg)
 
-$$
-x =
-\begin{bmatrix}
-x_{1} \\
-x_{2} \\
-\vdots \\
-x_{N} \\
-\end{bmatrix}
-\; \rightarrow \;
-x^T =
-\begin{bmatrix}
-x_{1} & x_{2} & \cdots & x_{N}
-\end{bmatrix}
-$$
+$$x =\begin{bmatrix}x_{1} \\x_{2} \\\vdots \\x_{N} \\\end{bmatrix}\; \rightarrow \;x^T =\begin{bmatrix}x_{1} &x_{2} & \cdots & x_{N}\end{bmatrix}$$
 
 **determinant**
 ![alt text](/assets/img/matrix.svg)
+
+2X2
+
+$${\displaystyle {\begin{aligned}|A|={\begin{vmatrix}a&b\\c&d\end{vmatrix}}=ad-bc.\end{aligned}}}$$
+
+3X3
+
+$${\displaystyle {\begin{aligned}|A|={\begin{vmatrix}a&b&c\\d&e&f\\g&h&i\end{vmatrix}}&=a\,{\begin{vmatrix}e&f\\h&i\end{vmatrix}}-b\,{\begin{vmatrix}d&f\\g&i\end{vmatrix}}+c\,{\begin{vmatrix}d&e\\g&h\end{vmatrix}}\\&=aei+bfg+cdh-ceg-bdi-afh.\end{aligned}}}$$
+
+
+*Properties of the determinant*
+The determinant has many properties. Some basic properties of determinants are
+1. $${\displaystyle \det(I_{n})=1} \det(I_{n})=1 where In is the n × n identity matrix.$$
+2. $${\displaystyle \det(A^{\rm {T}})=\det(A),} {\displaystyle \det(A^{\rm {T}})=\det(A),} where {\displaystyle A^{\rm {T}}} {\displaystyle A^{\rm {T}}} denotes the transpose of {\displaystyle A} A.$$
+3. $${\displaystyle \det(A^{-1})={\frac {1}{\det(A)}}=\det(A)^{-1}.} \det(A^{-1})={\frac {1}{\det(A)}}=\det(A)^{-1}.$$
+4. For square matrices A and B of equal size,<br/> $${\displaystyle \det(AB)=\det(A)\det(B).} \det(AB)=\det(A)\det(B).$$
+5. $${\displaystyle \det(cA)=c^{n}\det(A)} \det(cA)=c^{n}\det(A) for an n × n matrix, A.$$
+6. For positive semidefinite matrices A, B, and C of equal size, $${\displaystyle \det(A+B+C)+\det(C)\geq \det(A+C)+\det(B+C)} {\displaystyle \det(A+B+C)+\det(C)\geq \det(A+C)+\det(B+C)}, for {\displaystyle A,B,C\geq 0} {\displaystyle A,B,C\geq 0} with the corollary {\displaystyle \det(A+B)\geq \det(A)+\det(B).} {\displaystyle \det(A+B)\geq \det(A)+\det(B).}$$
+7. If A is a triangular matrix, i.e. ai,j = 0 whenever i > j or, alternatively, whenever i < j, then its determinant equals the product of the diagonal entries:
+$${\displaystyle \det(A)=a_{1,1}a_{2,2}\cdots a_{n,n}=\prod _{i=1}^{n}a_{i,i}.} \det(A)=a_{1,1}a_{2,2}\cdots a_{n,n}=\prod _{i=1}^{n}a_{i,i}.$$
+
+*Multiplicativity and matrix groups*
+$${\displaystyle \det(AB)=\det(A)\det(B).}$$
+<br/>
+<br/>
+$$\det(A^{-1})={\frac {1}{\det(A)}}$$
+
+
+**Euclidean vector**
+
+length
+
+$$\left\|\mathbf {a} \right\|={\sqrt {{a_{1}}^{2}+{a_{2}}^{2}+{a_{3}}^{2}}}$$
+
+unit vector
+
+$$\mathbf {\hat {a}} ={\frac {\mathbf {a} }{\left\|\mathbf {a} \right\|}}={\frac {a_{1}}{\left\|\mathbf {a} \right\|}}\mathbf {e} _{1}+{\frac {a_{2}}{\left\|\mathbf {a} \right\|}}\mathbf {e} _{2}+{\frac {a_{3}}{\left\|\mathbf {a} \right\|}}\mathbf {e} _{3}$$
+
+addition
+
+subtraction
+
+dot product
+
+$$\mathbf {a} \cdot \mathbf {b} =\left\|\mathbf {a} \right\|\left\|\mathbf {b} \right\|\cos \theta$$
+
+cross product
+
+$$\mathbf {a} \times \mathbf {b} =\left\|\mathbf {a} \right\|\left\|\mathbf {b} \right\|\sin(\theta )\,\mathbf {n}$$
