probability and format updated

--- a/_posts/2018-01-13-matrix.md
+++ b/_posts/2018-01-13-matrix.md
@@ -68,3 +68,7 @@ $$\mathbf {a} \cdot \mathbf {b} =\left\|\mathbf {a} \right\|\left\|\mathbf {b} \
 cross product
 
 $$\mathbf {a} \times \mathbf {b} =\left\|\mathbf {a} \right\|\left\|\mathbf {b} \right\|\sin(\theta )\,\mathbf {n}$$
+
+
+***
+*Reference*
