--- a/_posts/2018-02-06-about-web.md
+++ b/_posts/2018-02-06-about-web.md
@@ -15,4 +15,8 @@ tags: [Computer Science]
 
 - *e. OSI 7 layer*
 
-- *f. coolie & session & cache*
+- *f. cookie & session & cache*
+
+
+***
+*Reference*
