test statistic & web crawling & cloud server in process

--- a/_posts/2018-02-07-HTML.md
+++ b/_posts/2018-02-07-HTML.md
@@ -4,9 +4,9 @@ title: HTML
 tags: [Computer Science]
 ---
 
-**HTML**\
+**HTML**<br/>
 
-The most important components of HTML is tag. Let's see the most frequent usages of tags:
+The most important components of HTML is tag. Let's see the most frequent usages of tags:<br/>
 
 *a*
 >is anchor to use hyperlink
@@ -16,7 +16,7 @@ The most important components of HTML is tag. Let's see the most frequent usages
     link: <a href="http://www.google.com">google</a>
 </p>
 ```
-
+<br/>
 *body*
 >is main contents in HTML
 
@@ -32,29 +32,52 @@ The most important components of HTML is tag. Let's see the most frequent usages
 </html>
 ```
 
-
+<br/>
 *div*
 
 
-
+<br/>
 *h1*
 
+
+<br/>
 *html*
 
+
+
+
+<br/>
 *img*
 
+
+
+<br/>
 *ol*
 
+
+
+<br/>
 *p*
 
+
+
+
+<br/>
 *span*
 
+
+
+
+<br/>
 *table*
 
+
+
+<br/>
 *ul*
 
 
-
+<br/>
 ***
 *Reference*
 
