--- a/_posts/2018-02-15-MLE.md
+++ b/_posts/2018-02-15-MLE.md
@@ -28,8 +28,9 @@ $$
 
 The method defines a maximum likelihood estimate:
 <br/>
+
 $$
-{\displaystyle {\hat {\theta }}\in \{{\underset {\theta \in \Theta }{\operatorname {arg\,max} }}\ {\mathcal {L}}(\theta \,;x)\},}
+\hat\theta_{\text{MLE}} = \arg \max_{\theta} L(\theta; \{x_i\})
 $$
 <br/>
 natural logarithm of the likelihood function, called the log-likelihood:
