typo error edited

--- a/_posts/2018-02-08-CSS.md
+++ b/_posts/2018-02-08-CSS.md
@@ -80,7 +80,7 @@ code {
 ```CSS
 <p>
     <code class="keyword">color</code>의 값은
-    <code class="value">green</code> 입니다.
+    <code class="value">green</code> 입니다
 </p>
 ```
 
