--- a/_posts/2018-02-24-mysql.md
+++ b/_posts/2018-02-24-mysql.md
@@ -55,4 +55,4 @@ limit 5;
 
 [MySQL - 생활코딩](https://opentutorials.org/course/195)
 
-[DATABASE2 - MySQL | 생활코딩](https://opentutorials.org/course/3161)
+[DATABASE2 - MySQL - 생활코딩](https://opentutorials.org/course/3161)
