post error fix and update

--- a/_posts/2018-02-08-CSS.md
+++ b/_posts/2018-02-08-CSS.md
@@ -89,3 +89,5 @@ code {
 *Reference*
 
 [HTML5 자습서](http://html5tutorial.github.io/css/Selector.html)
+
+[CSS: 선택자(Selector) 이해](http://www.nextree.co.kr/p8468/)
