HTML tip updated

--- a/_posts/2018-02-07-HTML.md
+++ b/_posts/2018-02-07-HTML.md
@@ -78,6 +78,17 @@ The most important components of HTML is tag. Let's see the most frequent usages
 
 
 <br/>
+
+
+*tip*
+
+1. touch index.html
+2. at ATOM
+3. index.html => type 'html'  => enter
+4. get basic index html format
+
+
+
 ***
 *Reference*
 
