--- a/_posts/2018-01-13-matrix.md
+++ b/_posts/2018-01-13-matrix.md
@@ -4,71 +4,78 @@ title: Matrix
 tags: [Math, Linear Algebra]
 ---
 
-**Scala**
->is real number
->$$x \in \mathbf{R}$$
+1. **Scala**
 
-**vector**
-$$x = \begin{bmatrix}x_{1} \\x_{2} \\\vdots \\x_{N} \\\end{bmatrix},\;\;\;\;x \in \mathbf{R}^N$$
+<a href="https://www.codecogs.com/eqnedit.php?latex=\inline&space;$x&space;\in&space;\mathbf{R}$" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\inline&space;$x&space;\in&space;\mathbf{R}$" title="$x \in \mathbf{R}$" /></a>
+
+2. **vector**
+
+<a href="https://www.codecogs.com/eqnedit.php?latex=\inline&space;$x&space;=&space;\begin{bmatrix}x_{1}&space;\\x_{2}&space;\\\vdots&space;\\x_{N}&space;\\\end{bmatrix},\;\;\;\;x&space;\in&space;\mathbf{R}^N$" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\inline&space;$x&space;=&space;\begin{bmatrix}x_{1}&space;\\x_{2}&space;\\\vdots&space;\\x_{N}&space;\\\end{bmatrix},\;\;\;\;x&space;\in&space;\mathbf{R}^N$" title="$x = \begin{bmatrix}x_{1} \\x_{2} \\\vdots \\x_{N} \\\end{bmatrix},\;\;\;\;x \in \mathbf{R}^N$" /></a>
 
 
-**Matrix**
+3. **Matrix**
+
 ![alt text](/assets/img/matrix.svg)
 
-$$x =\begin{bmatrix}x_{1} \\x_{2} \\\vdots \\x_{N} \\\end{bmatrix}\; \rightarrow \;x^T =\begin{bmatrix}x_{1} &x_{2} & \cdots & x_{N}\end{bmatrix}$$
-
-**determinant**
-![alt text](/assets/img/matrix.svg)
+- *Determinant*
 
 2X2
 
-$${\displaystyle {\begin{aligned}|A|={\begin{vmatrix}a&b\\c&d\end{vmatrix}}=ad-bc.\end{aligned}}}$$
+<a href="https://www.codecogs.com/eqnedit.php?latex=\inline&space;${\displaystyle&space;{\begin{aligned}|A|={\begin{vmatrix}a&b\\c&d\end{vmatrix}}=ad-bc.\end{aligned}}}$" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\inline&space;${\displaystyle&space;{\begin{aligned}|A|={\begin{vmatrix}a&b\\c&d\end{vmatrix}}=ad-bc.\end{aligned}}}$" title="${\displaystyle {\begin{aligned}|A|={\begin{vmatrix}a&b\\c&d\end{vmatrix}}=ad-bc.\end{aligned}}}$" /></a>
+
+![alt text](/assets/img/determinant2x2.png)
 
 3X3
 
-$${\displaystyle {\begin{aligned}|A|={\begin{vmatrix}a&b&c\\d&e&f\\g&h&i\end{vmatrix}}&=a\,{\begin{vmatrix}e&f\\h&i\end{vmatrix}}-b\,{\begin{vmatrix}d&f\\g&i\end{vmatrix}}+c\,{\begin{vmatrix}d&e\\g&h\end{vmatrix}}\\&=aei+bfg+cdh-ceg-bdi-afh.\end{aligned}}}$$
+<a href="https://www.codecogs.com/eqnedit.php?latex=\inline&space;${\displaystyle&space;{\begin{aligned}|A|={\begin{vmatrix}a&b&c\\d&e&f\\g&h&i\end{vmatrix}}&=a\,{\begin{vmatrix}e&f\\h&i\end{vmatrix}}-b\,{\begin{vmatrix}d&f\\g&i\end{vmatrix}}&plus;c\,{\begin{vmatrix}d&e\\g&h\end{vmatrix}}\\&=aei&plus;bfg&plus;cdh-ceg-bdi-afh.\end{aligned}}}$" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\inline&space;${\displaystyle&space;{\begin{aligned}|A|={\begin{vmatrix}a&b&c\\d&e&f\\g&h&i\end{vmatrix}}&=a\,{\begin{vmatrix}e&f\\h&i\end{vmatrix}}-b\,{\begin{vmatrix}d&f\\g&i\end{vmatrix}}&plus;c\,{\begin{vmatrix}d&e\\g&h\end{vmatrix}}\\&=aei&plus;bfg&plus;cdh-ceg-bdi-afh.\end{aligned}}}$" title="${\displaystyle {\begin{aligned}|A|={\begin{vmatrix}a&b&c\\d&e&f\\g&h&i\end{vmatrix}}&=a\,{\begin{vmatrix}e&f\\h&i\end{vmatrix}}-b\,{\begin{vmatrix}d&f\\g&i\end{vmatrix}}+c\,{\begin{vmatrix}d&e\\g&h\end{vmatrix}}\\&=aei+bfg+cdh-ceg-bdi-afh.\end{aligned}}}$" /></a>
+
+![alt text](/assets/img/determinant3x3png)
+
+- *Inverse Matrix*
+
+<a href="https://www.codecogs.com/eqnedit.php?latex=\inline&space;{\displaystyle&space;A^{-1}={\frac&space;{1}{\det(A)}}\operatorname&space;{adj}&space;(A)}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\inline&space;{\displaystyle&space;A^{-1}={\frac&space;{1}{\det(A)}}\operatorname&space;{adj}&space;(A)}" title="{\displaystyle A^{-1}={\frac {1}{\det(A)}}\operatorname {adj} (A)}" /></a>
 
 
-*Properties of the determinant*
-The determinant has many properties. Some basic properties of determinants are
-1. $${\displaystyle \det(I_{n})=1} \det(I_{n})=1 where In is the n × n identity matrix.$$
-2. $${\displaystyle \det(A^{\rm {T}})=\det(A),} {\displaystyle \det(A^{\rm {T}})=\det(A),} where {\displaystyle A^{\rm {T}}} {\displaystyle A^{\rm {T}}} denotes the transpose of {\displaystyle A} A.$$
-3. $${\displaystyle \det(A^{-1})={\frac {1}{\det(A)}}=\det(A)^{-1}.} \det(A^{-1})={\frac {1}{\det(A)}}=\det(A)^{-1}.$$
-4. For square matrices A and B of equal size,<br/> $${\displaystyle \det(AB)=\det(A)\det(B).} \det(AB)=\det(A)\det(B).$$
-5. $${\displaystyle \det(cA)=c^{n}\det(A)} \det(cA)=c^{n}\det(A) for an n × n matrix, A.$$
-6. For positive semidefinite matrices A, B, and C of equal size, $${\displaystyle \det(A+B+C)+\det(C)\geq \det(A+C)+\det(B+C)} {\displaystyle \det(A+B+C)+\det(C)\geq \det(A+C)+\det(B+C)}, for {\displaystyle A,B,C\geq 0} {\displaystyle A,B,C\geq 0} with the corollary {\displaystyle \det(A+B)\geq \det(A)+\det(B).} {\displaystyle \det(A+B)\geq \det(A)+\det(B).}$$
-7. If A is a triangular matrix, i.e. ai,j = 0 whenever i > j or, alternatively, whenever i < j, then its determinant equals the product of the diagonal entries:
-$${\displaystyle \det(A)=a_{1,1}a_{2,2}\cdots a_{n,n}=\prod _{i=1}^{n}a_{i,i}.} \det(A)=a_{1,1}a_{2,2}\cdots a_{n,n}=\prod _{i=1}^{n}a_{i,i}.$$
+4. **Vector Algebra**
 
-*Multiplicativity and matrix groups*
-$${\displaystyle \det(AB)=\det(A)\det(B).}$$
-<br/>
-<br/>
-$$\det(A^{-1})={\frac {1}{\det(A)}}$$
+- *Length*
 
+<a href="https://www.codecogs.com/eqnedit.php?latex=\inline&space;\left\|\mathbf&space;{a}&space;\right\|={\sqrt&space;{{a_{1}}^{2}&plus;{a_{2}}^{2}&plus;{a_{3}}^{2}}}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\inline&space;\left\|\mathbf&space;{a}&space;\right\|={\sqrt&space;{{a_{1}}^{2}&plus;{a_{2}}^{2}&plus;{a_{3}}^{2}}}" title="\left\|\mathbf {a} \right\|={\sqrt {{a_{1}}^{2}+{a_{2}}^{2}+{a_{3}}^{2}}}" /></a>
 
-**Euclidean vector**
+- *Unit Vector*
 
-length
+<a href="https://www.codecogs.com/eqnedit.php?latex=\inline&space;\mathbf&space;{\hat&space;{a}}&space;={\frac&space;{\mathbf&space;{a}&space;}{\left\|\mathbf&space;{a}&space;\right\|}}={\frac&space;{a_{1}}{\left\|\mathbf&space;{a}&space;\right\|}}\mathbf&space;{e}&space;_{1}&plus;{\frac&space;{a_{2}}{\left\|\mathbf&space;{a}&space;\right\|}}\mathbf&space;{e}&space;_{2}&plus;{\frac&space;{a_{3}}{\left\|\mathbf&space;{a}&space;\right\|}}\mathbf&space;{e}&space;_{3}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\inline&space;\mathbf&space;{\hat&space;{a}}&space;={\frac&space;{\mathbf&space;{a}&space;}{\left\|\mathbf&space;{a}&space;\right\|}}={\frac&space;{a_{1}}{\left\|\mathbf&space;{a}&space;\right\|}}\mathbf&space;{e}&space;_{1}&plus;{\frac&space;{a_{2}}{\left\|\mathbf&space;{a}&space;\right\|}}\mathbf&space;{e}&space;_{2}&plus;{\frac&space;{a_{3}}{\left\|\mathbf&space;{a}&space;\right\|}}\mathbf&space;{e}&space;_{3}" title="\mathbf {\hat {a}} ={\frac {\mathbf {a} }{\left\|\mathbf {a} \right\|}}={\frac {a_{1}}{\left\|\mathbf {a} \right\|}}\mathbf {e} _{1}+{\frac {a_{2}}{\left\|\mathbf {a} \right\|}}\mathbf {e} _{2}+{\frac {a_{3}}{\left\|\mathbf {a} \right\|}}\mathbf {e} _{3}" /></a>
+- *Addition*
 
-$$\left\|\mathbf {a} \right\|={\sqrt {{a_{1}}^{2}+{a_{2}}^{2}+{a_{3}}^{2}}}$$
+![alt text](/assets/img/vector_add.png)
 
-unit vector
+- *Subtraction*
 
-$$\mathbf {\hat {a}} ={\frac {\mathbf {a} }{\left\|\mathbf {a} \right\|}}={\frac {a_{1}}{\left\|\mathbf {a} \right\|}}\mathbf {e} _{1}+{\frac {a_{2}}{\left\|\mathbf {a} \right\|}}\mathbf {e} _{2}+{\frac {a_{3}}{\left\|\mathbf {a} \right\|}}\mathbf {e} _{3}$$
+![alt text](/assets/img/vector_sub.png)
 
-addition
+- *Scalar Multiplication*
 
-subtraction
+![alt text](/assets/img/vector_scalar_multi.png)
 
-dot product
+- *Dot Product*
 
-$$\mathbf {a} \cdot \mathbf {b} =\left\|\mathbf {a} \right\|\left\|\mathbf {b} \right\|\cos \theta$$
+<a href="https://www.codecogs.com/eqnedit.php?latex=\inline&space;\mathbf&space;{a}&space;\cdot&space;\mathbf&space;{b}&space;=\left\|\mathbf&space;{a}&space;\right\|\left\|\mathbf&space;{b}&space;\right\|\cos&space;\theta" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\inline&space;\mathbf&space;{a}&space;\cdot&space;\mathbf&space;{b}&space;=\left\|\mathbf&space;{a}&space;\right\|\left\|\mathbf&space;{b}&space;\right\|\cos&space;\theta" title="\mathbf {a} \cdot \mathbf {b} =\left\|\mathbf {a} \right\|\left\|\mathbf {b} \right\|\cos \theta" /></a>
 
-cross product
+<a href="https://www.codecogs.com/eqnedit.php?latex=\inline&space;{\displaystyle&space;\mathbf&space;{a}&space;\cdot&space;\mathbf&space;{b}&space;=\sum&space;_{i=1}^{n}a_{i}b_{i}=a_{1}b_{1}&plus;a_{2}b_{2}&plus;\cdots&space;&plus;a_{n}b_{n}}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\inline&space;{\displaystyle&space;\mathbf&space;{a}&space;\cdot&space;\mathbf&space;{b}&space;=\sum&space;_{i=1}^{n}a_{i}b_{i}=a_{1}b_{1}&plus;a_{2}b_{2}&plus;\cdots&space;&plus;a_{n}b_{n}}" title="{\displaystyle \mathbf {a} \cdot \mathbf {b} =\sum _{i=1}^{n}a_{i}b_{i}=a_{1}b_{1}+a_{2}b_{2}+\cdots +a_{n}b_{n}}" /></a>
 
-$$\mathbf {a} \times \mathbf {b} =\left\|\mathbf {a} \right\|\left\|\mathbf {b} \right\|\sin(\theta )\,\mathbf {n}$$
+- *Cross Product*
 
+<a href="https://www.codecogs.com/eqnedit.php?latex=\inline&space;\mathbf&space;{a}&space;\times&space;\mathbf&space;{b}&space;=\left\|\mathbf&space;{a}&space;\right\|\left\|\mathbf&space;{b}&space;\right\|\sin(\theta&space;)\,\mathbf&space;{n}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\inline&space;\mathbf&space;{a}&space;\times&space;\mathbf&space;{b}&space;=\left\|\mathbf&space;{a}&space;\right\|\left\|\mathbf&space;{b}&space;\right\|\sin(\theta&space;)\,\mathbf&space;{n}" title="\mathbf {a} \times \mathbf {b} =\left\|\mathbf {a} \right\|\left\|\mathbf {b} \right\|\sin(\theta )\,\mathbf {n}" /></a>
+
+<a href="https://www.codecogs.com/eqnedit.php?latex=\inline&space;{\mathbf&space;{a}&space;}\times&space;{\mathbf&space;{b}&space;}=(a_{2}b_{3}-a_{3}b_{2}){\mathbf&space;{e}&space;}_{1}&plus;(a_{3}b_{1}-a_{1}b_{3}){\mathbf&space;{e}&space;}_{2}&plus;(a_{1}b_{2}-a_{2}b_{1}){\mathbf&space;{e}&space;}_{3}." target="_blank"><img src="https://latex.codecogs.com/gif.latex?\inline&space;{\mathbf&space;{a}&space;}\times&space;{\mathbf&space;{b}&space;}=(a_{2}b_{3}-a_{3}b_{2}){\mathbf&space;{e}&space;}_{1}&plus;(a_{3}b_{1}-a_{1}b_{3}){\mathbf&space;{e}&space;}_{2}&plus;(a_{1}b_{2}-a_{2}b_{1}){\mathbf&space;{e}&space;}_{3}." title="{\mathbf {a} }\times {\mathbf {b} }=(a_{2}b_{3}-a_{3}b_{2}){\mathbf {e} }_{1}+(a_{3}b_{1}-a_{1}b_{3}){\mathbf {e} }_{2}+(a_{1}b_{2}-a_{2}b_{1}){\mathbf {e} }_{3}." /></a>
 
 ***
 *Reference*
+
+[Vector algebra - wikipedia](https://en.wikipedia.org/wiki/Vector_algebra)
+
+[Matrix (math) - wikipedia](https://en.wikipedia.org/wiki/Matrix_(mathematics))
+
+[Determinant - wikipedia](https://en.wikipedia.org/wiki/Determinant)
+
+[Euclidean vector - wikipedia](https://en.wikipedia.org/wiki/Euclidean_vector)
