computer science tag updated

--- a/_posts/2018-02-09-requests.md
+++ b/_posts/2018-02-09-requests.md
@@ -3,67 +3,125 @@ layout: post
 title: Python requests
 tags: [Computer Science]
 ---
-**web crawling**
-
-*requests*
-
-usage
 
 ```python
-import requests
-import time
 from bs4 import BeautifulSoup
-import numpy as np
-import pandas as pd
-
-def make_url(pageSize=10, page=1):
-    return "http://m.stock.naver.com/api/json/sise/siseListJson.nhn?menu=market_sum&sosok=0&pageSize=" + str(pageSize) + "&page=" + str(page)
-
-def get_data(url):
-    response = requests.get(url)
-    json_info = response.json()
-    companys = json_info["result"]["itemList"]
-    df = pd.DataFrame(columns=["종목", "시세", "전일비", "등락율", "시가총액", "거래량"])
-    for company in companys:
-        df.loc[len(df)] = {
-            "종목":company["nm"],
-            "시세":company["nv"],
-            "전일비":company["cv"],
-            "등락율":company["cr"],
-            "시가총액":company["mks"],
-            "거래량":company["aq"],
-        }
-    return df
-```
-```python
-url = make_url(100,1)
-df = get_data(url)
-df.tail()
+import requests
+import urllib.request
 ```
 
-*BeautifulSoup*
 
 ```python
-def naver_top20():
-    df = pd.DataFrame(columns=["rank","keyword"])
-    response = requests.get("http://naver.com")
-    dom = BeautifulSoup(response.content, "html.parser")
-    keywords = dom.select(".ah_roll .ah_l .ah_item")
-    for keyword in keywords:
-        df.loc[len(df)] = {
-            "rank":keyword.select_one(".ah_r").text,
-            "keyword":keyword.select_one(".ah_k").text,
-        }
-    return df
-```
-```python
-naver_df = naver_top20()
-naver_df
+df = pd.DataFrame(columns=["rank","keyword"])
+response = requests.get("https://www.officeholidays.com/countries/usa/2016.php")
+bs = BeautifulSoup(response.content, "html.parser")
+trs = bs.select("table td")
+trs1 = trs[1::5]
 ```
 
+
+```python
+li = []
+holi = pd.DataFrame()
+count = 0
+
+for i in trs1[0:14]:
+    li.append((i.text).strip())
+    li[count] = '2016 ' + li[count]
+    li[count] = li[count].split(" ")
+    li[count] = li[count][0] + "-" + li[count][1] + '-' + li[count][2]
+    count += 1
+
+holi['date'] = li
+holi['date'] = pd.to_datetime(holi['date'])
+holi
+```
+
+
+
+
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>date</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>0</th>
+      <td>2016-01-01</td>
+    </tr>
+    <tr>
+      <th>1</th>
+      <td>2016-01-18</td>
+    </tr>
+    <tr>
+      <th>2</th>
+      <td>2016-02-15</td>
+    </tr>
+    <tr>
+      <th>3</th>
+      <td>2016-04-15</td>
+    </tr>
+    <tr>
+      <th>4</th>
+      <td>2016-05-08</td>
+    </tr>
+    <tr>
+      <th>5</th>
+      <td>2016-05-30</td>
+    </tr>
+    <tr>
+      <th>6</th>
+      <td>2016-06-19</td>
+    </tr>
+    <tr>
+      <th>7</th>
+      <td>2016-07-04</td>
+    </tr>
+    <tr>
+      <th>8</th>
+      <td>2016-09-05</td>
+    </tr>
+    <tr>
+      <th>9</th>
+      <td>2016-10-10</td>
+    </tr>
+    <tr>
+      <th>10</th>
+      <td>2016-11-11</td>
+    </tr>
+    <tr>
+      <th>11</th>
+      <td>2016-11-24</td>
+    </tr>
+    <tr>
+      <th>12</th>
+      <td>2016-11-25</td>
+    </tr>
+    <tr>
+      <th>13</th>
+      <td>2016-12-26</td>
+    </tr>
+  </tbody>
+</table>
+</div>
 
 
 ***
 *Reference*
-
-[예제로 배우는 파이썬 프로그래밍](http://pythonstudy.xyz/python/article/403-%ED%8C%8C%EC%9D%B4%EC%8D%AC-Web-Scraping)
