posts format updated

--- a/_posts/2018-02-15-MLE.md
+++ b/_posts/2018-02-15-MLE.md
@@ -4,47 +4,38 @@ title: Most Likelihood Estimation
 tags: [Math]
 ---
 
-*Likelihood*
->a function of the parameters of a statistical model given data
+### 1. *Likelihood*
 
-<br/>
+a function of the parameters of a statistical model given data
 
-Discrete probability distribution
-<br/>
-$$
-{\displaystyle {\mathcal {L}}(\theta \mid x)=p_{\theta }(x)=P_{\theta }(X=x)}
-$$
-<br/>
-Continuous probability distribution
-<br/>
-$$
-{\displaystyle {\mathcal {L}}(\theta \mid x)=f_{\theta }(x),\,}
-$$
-<br/>
+#### - Discrete probability distribution
 
 
-*MLE*
->a method of estimating the parameters of a statistical model, given observations
+${\displaystyle {\mathcal {L}}(\theta \mid x)=p_{\theta }(x)=P_{\theta }(X=x)}$
+
+
+#### - Continuous probability distribution
+
+${\displaystyle {\mathcal {L}}(\theta \mid x)=f_{\theta }(x)}$
+
+
+### 2. *MLE*
+
+a method of estimating the parameters of a statistical model, given observations
 
 The method defines a maximum likelihood estimate:
-<br/>
 
-$$
-\hat\theta_{\text{MLE}} = \arg \max_{\theta} L(\theta; \{x_i\})
-$$
-<br/>
+
+$\hat\theta_{\text{MLE}} = \arg \max_{\theta} L(\theta; \{x_i\})$
+
+
 natural logarithm of the likelihood function, called the log-likelihood:
-<br/>
-$$
-{\displaystyle \ell (\theta \,;x)=\ln {\mathcal {L}}(\theta \,;x),}
-$$
-<br/>
+
+<a href="https://www.codecogs.com/eqnedit.php?latex=\inline&space;${\displaystyle&space;\ell&space;(\theta&space;\,;x)=\ln&space;{\mathcal&space;{L}}(\theta&space;\;,x)}$" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\inline&space;${\displaystyle&space;\ell&space;(\theta&space;\,;x)=\ln&space;{\mathcal&space;{L}}(\theta&space;\;,x)}$" title="${\displaystyle \ell (\theta \,;x)=\ln {\mathcal {L}}(\theta \;,x)}$" /></a>
+
 or the average log-likelihood:
-<br/>
-$$
-{\displaystyle {\hat {\ell }}(\theta \,;x)={\frac {1}{n}}\ln {\mathcal {L(\theta \,;x)}}.}
-$$
-<br/>
+
+<a href="https://www.codecogs.com/eqnedit.php?latex=\inline&space;{\displaystyle&space;{\hat&space;{\ell&space;}}(\theta&space;\,;x)={\frac&space;{1}{n}}\ln&space;{\mathcal&space;{L(\theta&space;\,;x&space;)}}}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\inline&space;{\displaystyle&space;{\hat&space;{\ell&space;}}(\theta&space;\,;x)={\frac&space;{1}{n}}\ln&space;{\mathcal&space;{L(\theta&space;\,;x&space;)}}}" title="{\displaystyle {\hat {\ell }}(\theta \,;x)={\frac {1}{n}}\ln {\mathcal {L(\theta \,;x )}}}" /></a>
 
 
 
