--- a/_posts/2018-02-24-mysql.md
+++ b/_posts/2018-02-24-mysql.md
@@ -4,7 +4,7 @@ title: MySQL beginner
 tags: [Computer Science]
 ---
 
-0. **MySQL install and access**
+### 0. *MySQL install and access*
 
 ```
 $ sudo apt update
@@ -19,8 +19,7 @@ $ mysql -u root -p
 ```
 
 
-
-1. **select * from**
+### 1. *select * from*
 
 ```
 $ show databases;
@@ -35,7 +34,7 @@ $ desc country;
 $ select * from country;
 ```
 
-2. **where**
+### 2. *where*
 
 ```
 $ select
@@ -45,7 +44,7 @@ where gnp != 0 and population != 0;
 ```
 
 
-3. **where / order by**
+### 3. *where / order by*
 
 ```
 $ select
@@ -56,7 +55,7 @@ order by avg desc;
 ```
 
 
-4. **where / order by / group by**
+### 4. *where / order by / group by*
 
 ```
 $ select
@@ -68,7 +67,7 @@ order by avg desc;
 ```
 
 
-5. **where / order by / group by / having**
+### 5. *where / order by / group by / having*
 
 ```
 $ select
@@ -81,7 +80,7 @@ order by avg desc;
 ```
 
 
-6. **where / order by / group by / limit / having**
+### 6. *where / order by / group by / limit / having*
 
 ```
 $ select
