--- a/_posts/2018-01-13-matrix.md
+++ b/_posts/2018-01-13-matrix.md
@@ -4,66 +4,67 @@ title: Matrix
 tags: [Math, Linear Algebra]
 ---
 
-1. **Scala**
+### 1. *Scala*
 
 <a href="https://www.codecogs.com/eqnedit.php?latex=\inline&space;$x&space;\in&space;\mathbf{R}$" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\inline&space;$x&space;\in&space;\mathbf{R}$" title="$x \in \mathbf{R}$" /></a>
 
-2. **vector**
+### 2. *vector*
 
 <a href="https://www.codecogs.com/eqnedit.php?latex=\inline&space;$x&space;=&space;\begin{bmatrix}x_{1}&space;\\x_{2}&space;\\\vdots&space;\\x_{N}&space;\\\end{bmatrix},\;\;\;\;x&space;\in&space;\mathbf{R}^N$" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\inline&space;$x&space;=&space;\begin{bmatrix}x_{1}&space;\\x_{2}&space;\\\vdots&space;\\x_{N}&space;\\\end{bmatrix},\;\;\;\;x&space;\in&space;\mathbf{R}^N$" title="$x = \begin{bmatrix}x_{1} \\x_{2} \\\vdots \\x_{N} \\\end{bmatrix},\;\;\;\;x \in \mathbf{R}^N$" /></a>
 
 
-3. **Matrix**
+### 3. *Matrix*
 
 ![alt text](/assets/img/matrix.svg)
 
-- *Determinant*
+#### - Determinant
 
-2X2
+- 2X2
 
 <a href="https://www.codecogs.com/eqnedit.php?latex=\inline&space;${\displaystyle&space;{\begin{aligned}|A|={\begin{vmatrix}a&b\\c&d\end{vmatrix}}=ad-bc.\end{aligned}}}$" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\inline&space;${\displaystyle&space;{\begin{aligned}|A|={\begin{vmatrix}a&b\\c&d\end{vmatrix}}=ad-bc.\end{aligned}}}$" title="${\displaystyle {\begin{aligned}|A|={\begin{vmatrix}a&b\\c&d\end{vmatrix}}=ad-bc.\end{aligned}}}$" /></a>
 
 ![alt text](/assets/img/determinant2x2.png)
 
-3X3
+- 3X3
 
 <a href="https://www.codecogs.com/eqnedit.php?latex=\inline&space;${\displaystyle&space;{\begin{aligned}|A|={\begin{vmatrix}a&b&c\\d&e&f\\g&h&i\end{vmatrix}}&=a\,{\begin{vmatrix}e&f\\h&i\end{vmatrix}}-b\,{\begin{vmatrix}d&f\\g&i\end{vmatrix}}&plus;c\,{\begin{vmatrix}d&e\\g&h\end{vmatrix}}\\&=aei&plus;bfg&plus;cdh-ceg-bdi-afh.\end{aligned}}}$" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\inline&space;${\displaystyle&space;{\begin{aligned}|A|={\begin{vmatrix}a&b&c\\d&e&f\\g&h&i\end{vmatrix}}&=a\,{\begin{vmatrix}e&f\\h&i\end{vmatrix}}-b\,{\begin{vmatrix}d&f\\g&i\end{vmatrix}}&plus;c\,{\begin{vmatrix}d&e\\g&h\end{vmatrix}}\\&=aei&plus;bfg&plus;cdh-ceg-bdi-afh.\end{aligned}}}$" title="${\displaystyle {\begin{aligned}|A|={\begin{vmatrix}a&b&c\\d&e&f\\g&h&i\end{vmatrix}}&=a\,{\begin{vmatrix}e&f\\h&i\end{vmatrix}}-b\,{\begin{vmatrix}d&f\\g&i\end{vmatrix}}+c\,{\begin{vmatrix}d&e\\g&h\end{vmatrix}}\\&=aei+bfg+cdh-ceg-bdi-afh.\end{aligned}}}$" /></a>
 
 ![alt text](/assets/img/determinant3x3png)
 
-- *Inverse Matrix*
+#### - Inverse Matrix
 
 <a href="https://www.codecogs.com/eqnedit.php?latex=\inline&space;{\displaystyle&space;A^{-1}={\frac&space;{1}{\det(A)}}\operatorname&space;{adj}&space;(A)}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\inline&space;{\displaystyle&space;A^{-1}={\frac&space;{1}{\det(A)}}\operatorname&space;{adj}&space;(A)}" title="{\displaystyle A^{-1}={\frac {1}{\det(A)}}\operatorname {adj} (A)}" /></a>
 
 
-4. **Vector Algebra**
+### 4. *Vector Algebra*
 
-- *Length*
+#### - Length
 
 <a href="https://www.codecogs.com/eqnedit.php?latex=\inline&space;\left\|\mathbf&space;{a}&space;\right\|={\sqrt&space;{{a_{1}}^{2}&plus;{a_{2}}^{2}&plus;{a_{3}}^{2}}}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\inline&space;\left\|\mathbf&space;{a}&space;\right\|={\sqrt&space;{{a_{1}}^{2}&plus;{a_{2}}^{2}&plus;{a_{3}}^{2}}}" title="\left\|\mathbf {a} \right\|={\sqrt {{a_{1}}^{2}+{a_{2}}^{2}+{a_{3}}^{2}}}" /></a>
 
-- *Unit Vector*
+#### - Unit Vector
 
 <a href="https://www.codecogs.com/eqnedit.php?latex=\inline&space;\mathbf&space;{\hat&space;{a}}&space;={\frac&space;{\mathbf&space;{a}&space;}{\left\|\mathbf&space;{a}&space;\right\|}}={\frac&space;{a_{1}}{\left\|\mathbf&space;{a}&space;\right\|}}\mathbf&space;{e}&space;_{1}&plus;{\frac&space;{a_{2}}{\left\|\mathbf&space;{a}&space;\right\|}}\mathbf&space;{e}&space;_{2}&plus;{\frac&space;{a_{3}}{\left\|\mathbf&space;{a}&space;\right\|}}\mathbf&space;{e}&space;_{3}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\inline&space;\mathbf&space;{\hat&space;{a}}&space;={\frac&space;{\mathbf&space;{a}&space;}{\left\|\mathbf&space;{a}&space;\right\|}}={\frac&space;{a_{1}}{\left\|\mathbf&space;{a}&space;\right\|}}\mathbf&space;{e}&space;_{1}&plus;{\frac&space;{a_{2}}{\left\|\mathbf&space;{a}&space;\right\|}}\mathbf&space;{e}&space;_{2}&plus;{\frac&space;{a_{3}}{\left\|\mathbf&space;{a}&space;\right\|}}\mathbf&space;{e}&space;_{3}" title="\mathbf {\hat {a}} ={\frac {\mathbf {a} }{\left\|\mathbf {a} \right\|}}={\frac {a_{1}}{\left\|\mathbf {a} \right\|}}\mathbf {e} _{1}+{\frac {a_{2}}{\left\|\mathbf {a} \right\|}}\mathbf {e} _{2}+{\frac {a_{3}}{\left\|\mathbf {a} \right\|}}\mathbf {e} _{3}" /></a>
-- *Addition*
+
+#### - Addition
 
 ![alt text](/assets/img/vector_add.png)
 
-- *Subtraction*
+#### - Subtraction
 
 ![alt text](/assets/img/vector_sub.png)
 
-- *Scalar Multiplication*
+#### - Scalar Multiplication
 
 ![alt text](/assets/img/vector_scalar_multi.png)
 
-- *Dot Product*
+#### - Dot Product
 
 <a href="https://www.codecogs.com/eqnedit.php?latex=\inline&space;\mathbf&space;{a}&space;\cdot&space;\mathbf&space;{b}&space;=\left\|\mathbf&space;{a}&space;\right\|\left\|\mathbf&space;{b}&space;\right\|\cos&space;\theta" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\inline&space;\mathbf&space;{a}&space;\cdot&space;\mathbf&space;{b}&space;=\left\|\mathbf&space;{a}&space;\right\|\left\|\mathbf&space;{b}&space;\right\|\cos&space;\theta" title="\mathbf {a} \cdot \mathbf {b} =\left\|\mathbf {a} \right\|\left\|\mathbf {b} \right\|\cos \theta" /></a>
 
 <a href="https://www.codecogs.com/eqnedit.php?latex=\inline&space;{\displaystyle&space;\mathbf&space;{a}&space;\cdot&space;\mathbf&space;{b}&space;=\sum&space;_{i=1}^{n}a_{i}b_{i}=a_{1}b_{1}&plus;a_{2}b_{2}&plus;\cdots&space;&plus;a_{n}b_{n}}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\inline&space;{\displaystyle&space;\mathbf&space;{a}&space;\cdot&space;\mathbf&space;{b}&space;=\sum&space;_{i=1}^{n}a_{i}b_{i}=a_{1}b_{1}&plus;a_{2}b_{2}&plus;\cdots&space;&plus;a_{n}b_{n}}" title="{\displaystyle \mathbf {a} \cdot \mathbf {b} =\sum _{i=1}^{n}a_{i}b_{i}=a_{1}b_{1}+a_{2}b_{2}+\cdots +a_{n}b_{n}}" /></a>
 
-- *Cross Product*
+#### - Cross Product
 
 <a href="https://www.codecogs.com/eqnedit.php?latex=\inline&space;\mathbf&space;{a}&space;\times&space;\mathbf&space;{b}&space;=\left\|\mathbf&space;{a}&space;\right\|\left\|\mathbf&space;{b}&space;\right\|\sin(\theta&space;)\,\mathbf&space;{n}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\inline&space;\mathbf&space;{a}&space;\times&space;\mathbf&space;{b}&space;=\left\|\mathbf&space;{a}&space;\right\|\left\|\mathbf&space;{b}&space;\right\|\sin(\theta&space;)\,\mathbf&space;{n}" title="\mathbf {a} \times \mathbf {b} =\left\|\mathbf {a} \right\|\left\|\mathbf {b} \right\|\sin(\theta )\,\mathbf {n}" /></a>
 
