tiltle bug fixed

--- a/_posts/2018-01-13-matrix.md
+++ b/_posts/2018-01-13-matrix.md
@@ -5,6 +5,8 @@ tags: [Math, Linear Algebra]
 
 ---
 
+### Matrix
+
 ### 1. *Scala*
 
 <a href="https://www.codecogs.com/eqnedit.php?latex=\inline&space;$x&space;\in&space;\mathbf{R}$" target="_blank"><img src="https://latex.codecogs.com/gif.latex?\inline&space;$x&space;\in&space;\mathbf{R}$" title="$x \in \mathbf{R}$" /></a>
