--- a/_posts/2018-02-15-MLE.md
+++ b/_posts/2018-02-15-MLE.md
@@ -5,6 +5,8 @@ tags: [Math]
 
 ---
 
+### Most Likelihood Estimation
+
 ### 1. *Likelihood*
 
 a function of the parameters of a statistical model given data
