--- a/_posts/2018-02-28-roc-auc.md
+++ b/_posts/2018-02-28-roc-auc.md
@@ -42,9 +42,31 @@ array([[2, 0, 0],
 
 <a href="https://www.codecogs.com/eqnedit.php?latex=F_1&space;=&space;\frac{2&space;\cdot&space;\text{precision}&space;\cdot&space;\text{recall}}{&space;\text{precision}&space;&plus;&space;\text{recall}}" target="_blank"><img src="https://latex.codecogs.com/gif.latex?F_1&space;=&space;\frac{2&space;\cdot&space;\text{precision}&space;\cdot&space;\text{recall}}{&space;\text{precision}&space;&plus;&space;\text{recall}}" title="F_1 = \frac{2 \cdot \text{precision} \cdot \text{recall}}{ \text{precision} + \text{recall}}" /></a>
 
+
 #### - precision vs recall
 
 ![alt text](/assets/img/Precisionrecall.svg.png)
+
+#### - classification report
+
+```python
+$ from sklearn.metrics import *
+
+$ y_true = [0, 1, 2, 2, 2]
+$ y_pred = [0, 0, 2, 2, 1]
+$ target_names = ['class 0', 'class 1', 'class 2']
+$ print(classification_report(y_true, y_pred, target_names=target_names))
+
+             precision    recall  f1-score   support
+
+    class 0       0.50      1.00      0.67         1
+    class 1       0.00      0.00      0.00         1
+    class 2       1.00      0.67      0.80         3
+
+avg / total       0.70      0.60      0.61         5
+
+
+```
 
 ### 3. ROC & AUC
 
