--- a/_posts/2018-02-24-mysql.md
+++ b/_posts/2018-02-24-mysql.md
@@ -40,7 +40,7 @@ $ select * from country;
 ### 2. *where*
 
 ```
-$ select
+select
 avg(population) as population, avg(gnp) as gnp, avg(gnp) / avg(population) * 1000 as avg
 from country
 where gnp != 0 and population != 0;
@@ -50,7 +50,7 @@ where gnp != 0 and population != 0;
 ### 3. *where / order by*
 
 ```
-$ select
+select
 avg(population) as population, avg(gnp) as gnp, avg(gnp) / avg(population) * 1000 as avg
 from country
 where gnp != 0 and population != 0
@@ -61,7 +61,7 @@ order by avg desc;
 ### 4. *where / order by / group by*
 
 ```
-$ select
+select
 continent, avg(population) as population, avg(gnp) as gnp, avg(gnp) / avg(population) * 1000 as avg
 from country
 where gnp != 0 and population != 0
@@ -73,7 +73,7 @@ order by avg desc;
 ### 5. *where / order by / group by / having*
 
 ```
-$ select
+select
 continent, avg(population) as population, avg(gnp) as gnp, avg(gnp) / avg(population) * 1000 as avg
 from country
 where gnp != 0 and population != 0
@@ -86,7 +86,7 @@ order by avg desc;
 ### 6. *where / order by / group by / limit / having*
 
 ```
-$ select
+select
 continent, avg(population) as population, avg(gnp) as gnp, avg(gnp) / avg(population) * 1000 as avg
 from country
 where gnp != 0 and population != 0
